// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - Checkout renders correctly for "/delivery" route 1`] = `
Array [
  <NavigationMock
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "keow05",
            "pathname": "/checkout/delivery",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "keow05",
          "pathname": "/checkout/delivery",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "key": "keow05",
        "pathname": "/checkout/delivery",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {
          "checkoutStep": "delivery",
        },
        "path": "/checkout/:checkoutStep",
        "url": "/checkout/delivery",
      }
    }
  />,
  .c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <CheckoutDeliveryMock
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "keow05",
              "pathname": "/checkout/delivery",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "keow05",
            "pathname": "/checkout/delivery",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "key": "keow05",
          "pathname": "/checkout/delivery",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/checkout/delivery",
          "url": "/checkout/delivery",
        }
      }
    />
  </section>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/payment" route 1`] = `
Array [
  <NavigationMock
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "9rqx2t",
            "pathname": "/checkout/payment",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "9rqx2t",
          "pathname": "/checkout/payment",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "key": "9rqx2t",
        "pathname": "/checkout/payment",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {
          "checkoutStep": "payment",
        },
        "path": "/checkout/:checkoutStep",
        "url": "/checkout/payment",
      }
    }
  />,
  .c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <CheckoutPaymentMock
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "9rqx2t",
              "pathname": "/checkout/payment",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "9rqx2t",
            "pathname": "/checkout/payment",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "key": "9rqx2t",
          "pathname": "/checkout/payment",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/checkout/payment",
          "url": "/checkout/payment",
        }
      }
    />
  </section>,
]
`;

exports[`COMPONENT - Checkout renders correctly for "/review" route 1`] = `
Array [
  <NavigationMock
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "canGo": [Function],
        "createHref": [Function],
        "entries": Array [
          Object {
            "hash": "",
            "key": "8t1tmc",
            "pathname": "/checkout/review",
            "search": "",
            "state": undefined,
          },
        ],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "index": 0,
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "key": "8t1tmc",
          "pathname": "/checkout/review",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
    location={
      Object {
        "hash": "",
        "key": "8t1tmc",
        "pathname": "/checkout/review",
        "search": "",
        "state": undefined,
      }
    }
    match={
      Object {
        "isExact": true,
        "params": Object {
          "checkoutStep": "review",
        },
        "path": "/checkout/:checkoutStep",
        "url": "/checkout/review",
      }
    }
  />,
  .c0 {
  margin-top: 100px;
}

<section
    className="c0"
  >
    <CheckoutReviewMock
      history={
        Object {
          "action": "POP",
          "block": [Function],
          "canGo": [Function],
          "createHref": [Function],
          "entries": Array [
            Object {
              "hash": "",
              "key": "8t1tmc",
              "pathname": "/checkout/review",
              "search": "",
              "state": undefined,
            },
          ],
          "go": [Function],
          "goBack": [Function],
          "goForward": [Function],
          "index": 0,
          "length": 1,
          "listen": [Function],
          "location": Object {
            "hash": "",
            "key": "8t1tmc",
            "pathname": "/checkout/review",
            "search": "",
            "state": undefined,
          },
          "push": [Function],
          "replace": [Function],
        }
      }
      location={
        Object {
          "hash": "",
          "key": "8t1tmc",
          "pathname": "/checkout/review",
          "search": "",
          "state": undefined,
        }
      }
      match={
        Object {
          "isExact": true,
          "params": Object {},
          "path": "/checkout/review",
          "url": "/checkout/review",
        }
      }
    />
  </section>,
]
`;
